Fix [Nuclio] logs in UI date range wrong z-index

--- a/src/nuclio/functions/version/version-execution-log/version-execution-log.less
+++ b/src/nuclio/functions/version/version-execution-log/version-execution-log.less
@@ -8,7 +8,7 @@
     height: 95%;
 
     .info-page-filters {
-      z-index: 990;
+      z-index: 1000;
 
       .multiple-checkboxes-option {
         margin: 10px 0;
